[package]
name = "newsletter"
version = "0.1.0"
authors = ["Ankur Rathore <crathore.ankur@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
reqwest = "0.11"
